--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -2,9 +2,9 @@
     position: sticky;
     top: 0;
     margin: 0 auto;
-    width: 99%;
+    width: 95%;
     z-index: 9;
-    padding: .5rem;
+    padding: .5rem 2rem;
 }
 
 .right-nav a i {
