--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,7 +17,7 @@
 }
 
 .section-name {
-    color: var(--white);
+    color: var(--black);
     padding: 1rem 0 0 2rem;
     font-weight: normal;
 }
@@ -94,7 +94,7 @@
     flex-wrap: wrap;
     margin: 1rem;
     padding: 1rem;
-    border: 1px solid var(--primary-light);
+    border: 1px solid var(--black);
     border-radius: 10px;
 }
 
@@ -106,7 +106,7 @@
 }
 
 .brand-box img {
-    opacity: 0.7;
+    /* opacity: 0.7; */
     transform: scale(1);
     z-index: 4;
 }
@@ -130,7 +130,7 @@
 }
 
 .guitar-type {
-    color: var(--white);
+    color: var(--black);
     text-align: center;
     font-weight: normal;
     text-transform: uppercase;
