--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -39,8 +39,19 @@ input:focus {
 }
 
 .icon {
-    font-size: 1rem;
+    font-size: 1.3rem;
     text-align: center;
+}
+
+.icon:hover {
+    background-color: rgba(255, 255, 255, 0.489);
+}
+
+.icon-badge {
+    /* background-color: yellow; */
+    height: 15px;
+    width: 1px;
+    /* padding: 0.1rem 0.5rem; */
 }
 
 /* Media queries */
