--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -11,10 +11,10 @@ body {
 .cart-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     margin: 1rem;
     padding: 0.5rem;
+    height: 100vh;
 }
 
 .cart-title {
@@ -124,6 +124,18 @@ body {
     flex-direction: column;
     align-items: center;
     color: rgb(248, 165, 30);
+    margin-top: 5rem;
+}
+
+.cart-title {
+    padding: 0.5rem;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.cart-total {
+    font-weight: 400;
+    font-size: 0.8rem;
 }
 
 @media only screen and (max-width: 1200px) {
