--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -112,6 +112,7 @@
 .guitar-type {
     color: var(--black);
     text-align: center;
-    font-weight: normal;
+    font-weight: 500;
     text-transform: uppercase;
+    padding-top: .5rem;
 }
